--- a/eas.bib
+++ b/eas.bib
@@ -1,6 +1,36 @@
 % References. First version from:
 % https://github.com/katyhuff/2016-06-19-dagstuhl/blob/gh-pages/dagstuhl-manifesto.bib
 
+@inproceedings{mcconahy2012techniques,
+  title={Techniques for monitoring runtime architectures of socio-technical ecosystems},
+  author={McConahy, A and Eisenbraun, Ben and Howison, James and Herbsleb, James D and Sliz, P},
+  booktitle={Workshop on Data-Intensive Collaboration in Science and Engineering (CSCW 2012)},
+  year={2012},
+  url = {http://www.dicose.org/images/5/5d/Mcconahy_eisenbraun_howison_herbsleb.pdf}
+}
+
+@article{howison2015understanding,
+  title={Understanding the scientific software ecosystem and its impact: Current and future measures},
+  author={Howison, James and Deelman, Ewa and McLennan, Michael J. and da Silva, Rafael Ferreira and Herbsleb, James D},
+  journal={Research Evaluation},
+  pages={rvv014},
+  year={2015},
+  publisher={Oxford University Press},
+  doi = {10.1093/reseval/rvv014},
+  url = {http://herbsleb.org/web-pubs/pdfs/howison-understanding-2015.pdf}
+}
+
+@article{howison2014collaboration,
+  title={Collaboration Through Open Superposition: A Theory of the Open Source Way.},
+  author={Howison, James and Crowston, Kevin},
+  journal={{MIS} Quarterly},
+  volume={38},
+  number={1},
+  pages={29--50},
+  year={2014},
+  url = {http://aisel.aisnet.org/cgi/viewcontent.cgi?article=3156&context=misq}
+}
+
 @article{DBLP:journals/scp/MensBK14,
   author    = {Kim Mens and
                M. G. J. van den Brand and
