fixing UIUC affils to only appear once

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -42,9 +42,9 @@
 \author[12]{Robert Haines}%\affil[12]{University of Manchester, UK}
 \author[13]{Robert Hirschfeld}\affil[13]{~Hasso-Plattner-Institut -- Potsdam, Germany}
 \author[14]{James Howison}\affil[14,24]{~University of Texas at Austin, US}
-\author[15]{Kathryn Huff}\affil[15]{University of Illinois at Urbana-Champaign, US}
+\author[15]{Kathryn Huff}\affil[15,17,22]{~University of Illinois at Urbana-Champaign, US}
 \author[16]{Caroline Jay}%\affil[16]{University of Manchester, UK}
-\author[17]{Daniel S. Katz}\affil[17,22]{~University of Illinois Urbana-Champaign, US}
+\author[17]{Daniel S. Katz}%\affil[17,22]{~University of Illinois Urbana-Champaign, US}
 \author[18]{Claude Kirchner}\affil[18]{INRIA -- Le Chesnay, France}
 \author[19]{Katie Kuksenok}\affil[19]{University of Washington -- Seattle, US}
 \author[20]{Ralf L\"{a}mmel}\affil[20]{Universit\"{a}t Koblenz-Landau, Germany}
