small wording changes in abstract

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -87,11 +87,11 @@
 \begin{abstract}
 Software is often a critical component of scientific research.
 It can be a component of the academic research methods used to produce research results, or it may itself be an academic research result.
-Software, however, is rarely considered to be a citable artifact in its own right.
-With the advent of open-source software, artifact evaluation committees of conferences, and journals that include source code and running systems as part of the published artifacts, we foresee that software will increasingly be part of the academic process.
+Software, however, has rarely been considered to be a citable artifact in its own right.
+With the advent of open-source software, artifact evaluation committees of conferences, and journals that include source code and running systems as part of the published artifacts, we foresee that software will increasingly be recognized as part of the academic process.
 The quality and sustainability of this software must be accounted for, both a priori and a posteriori.
 
-The Dagstuhl Perspectives Workshop on ``Engineering Academic Software'' has examined the strengths, weaknesses, risks and opportunities of academic software engineering. A key outcome of the workshop is this Dagstuhl Manifesto, serving as a roadmap towards future professional software engineering for software-based research instruments and other software produced and used in an academic context.
+The Dagstuhl Perspectives Workshop on ``Engineering Academic Software'' has examined the strengths, weaknesses, risks, and opportunities of academic software engineering. A key outcome of the workshop is this Dagstuhl Manifesto, serving as a roadmap towards future professional software engineering for software-based research instruments and other software produced and used in an academic context.
 The manifesto is expressed in terms of a series of actionable ``pledges'' that users and developers of academic research software can take as concrete steps towards improving the environment in which that software is produced.
 \end{abstract}
 
