more work on comments, cleanup of attendees list

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -152,11 +152,12 @@ and
 \emph{Academia is software driven.} As software is becoming a pervasive technology for automating and innovating every aspect of the human condition (work, play, love and war), it is also embedded firmly in the academic world. On the one hand, in computer science, and in software engineering research in particular we see experimental software and toolkits emerge continuously, either as part of the \emph{output} of research effort, or as part of the \emph{research method}. On the other hand, in general it may be that software is used even more actively in other fields of research such as mathematics, biology, particle physics, astronomy, medicine, and law. Here too, we can distinguish software that is part of the output (\ie development of innovative production techniques) from software that contributes to the research methods. 
 
 There is an explosion of available open-data online which is accessed and analysed through the creation of new software --- generating more data to analyse. We focus on the \emph{sustainability} of this software, \ie any software that acquires, cleanses, stores, annotates, transforms, filters, generates (\etc) research data.
-By ``sustainability'' we mean the \emph{capacity to endure}. Software is sustainable if it will continue to be available in the future, on new platforms, and meeting new needs. \katznote{Did we come up with this definition?  If not, we should cite where we got it from.  Actually, I see I might have said it - it's from slide 23 of \url{http://www.slideshare.net/danielskatz/scientific-software-challenges-and-community-responses}, though I don't know if made it up or took it from somewhere else and forgot to cite it} \on{Yes, I took it from you. Shall we say, ``We define software to be sustainable ...''?}
+By ``sustainability'' we mean the \emph{capacity to endure}. We define software as sustainable if it will continue to be available in the future, on new platforms, and meeting new needs. 
+\katznote{Did we come up with this definition?  If not, we should cite where we got it from.  Actually, I see I might have said it - it's from slide 23 of \url{http://www.slideshare.net/danielskatz/scientific-software-challenges-and-community-responses}, though I don't know if made it up or took it from somewhere else and forgot to cite it} \on{Yes, I took it from you. Shall we say, ``We define software to be sustainable ...''?} \katznote{I've done so - please remove this comment if you think this is ok.}
 
 
 The perspective of this workshop is that of \emph{the research team developing and/or using academic software.} 
-A key role is that of the \emph{research software engineer} (RSE), the person with expertise both in academic research, and in the software engineering tools and technology needed to build the software used in the research, and to make it sustainable. \katznote{1. While I like the RSE title, I think there are other similar titles, perhaps used in other places, and perhaps we should mention some of them, such as Cyberinfrastructure Concierge, research infrastructure engineering, etc.  2. I think there can be a number of different types of people who have expertise in both the research field and software engineering.  Some of them are faculty.  I feel like RSEs generally have more strength in the SE part and less in the domain, while typical faculty have more in the domain and less in SE, but both can be on different points of the spectrum.}
+A key role is that of the \emph{research software engineer} (RSE), the person with expertise both in academic research, and in the software engineering tools and technology needed to build the software used in the research, and to make it sustainable. \katznote{1. While I like the RSE title, I think there are other similar titles, perhaps used in other places, and perhaps we should mention some of them, such as Cyberinfrastructure Concierge, research infrastructure engineer, etc.  2. I think there can be a number of different types of people who have expertise in both the research field and software engineering.  Some of them are faculty.  I feel like RSEs generally have more strength in the SE part and less in the domain, while typical faculty have more in the domain and less in SE, but both can be on different points of the spectrum.}
 In this context it is critical that the \emph{intellectual contribution of software} be recognized and actively supported.
 
 As software is becoming integral to our processes, the tools we use, and the output we produce, this perspective provides a starting point for a discussion that is both timely and pressing:
@@ -257,7 +258,9 @@ By requiring authors to provide these links, we will work towards educating the 
 
 \emph{Who else needs to act?} Publishers need to agree to citations being included in publications. Software authors need to provide information about how their software should be cited. Citation tracking systems need to include software citations. 
 Editors and authors too will need to begin to hold their colleagues to this standard in order for this to become a community norm.
-Conference chairs/journal editors may add this requirement explicitly when when publishing a call for papers. Those publishers/repositorians \katznote{I don't know what the name is for people who create and run repositories} \on{repository administrators?} need to create mechanisms for all products to includes citations as part of their metadata.
+Conference chairs/journal editors may add this requirement explicitly when when publishing a call for papers. Publishers and repository adminstrators
+% \katznote{I don't know what the name is for people who create and run repositories} \on{repository administrators?}
+need to create mechanisms for all products to includes citations as part of their metadata.
 
 %\todo{What are examples of what and what not to cite? Also, there might be differences in granularity that should be considered...}
 %\katznote{see \S5.1 of \url{https://peerj.com/preprints/2169/} for some discussion on this}
@@ -576,14 +579,14 @@ Specific questions in the area of ecosystem analysis and metadata are:
 \participant Robert Haines\\ University of Manchester
 \participant Robert Hirschfeld\\ Hasso-Plattner-Institut -- Potsdam
 \participant James Howison\\ University of Texas -- Austin
-\participant Kathryn Huff\\ University of Illinois at Urbana-Champaigh
+\participant Kathryn Huff\\ University of Illinois at Urbana-Champaign
 \participant Caroline Jay\\ University of Manchester
-\participant Dan Katz\\ University of Illinois at Urbana Champaign
+\participant Daniel S. Katz\\ University of Illinois at Urbana-Champaign
 \participant Claude Kirchner\\ INRIA -- Le Chesnay
 \participant Katie Kuksenok\\ University of Washington -- Seattle
 \participant Ralf L\"ammel\\ Universit\"at Koblenz-Landau
 \participant Oscar Nierstrasz\\ University of Bern
-\participant Matt Turk\\ University of Illinois at Urbana Champaign
+\participant Matt Turk\\ University of Illinois at Urbana-Champaign
 \participant Rob van Nieuwpoort\\ VU University Amsterdam
 \participant Matthew Vaughn\\ University of Texas -- Austin
 \participant Jurgen Vinju\\ CWI -- Amsterdam
