--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -193,6 +193,7 @@ and
 \paragraph{Citation}
 \begin{itemize}
 \item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to do so as well.
+\katznote{maybe ``\dots and when reviewing, I will require others to cite the software they have used.''}
 \end{itemize}
 
 % ----------
