add structure to section 1 - feel free to revert if you don't like this

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -181,6 +181,8 @@ What is required in terms of long term funding, education and infra-structure to
 
 The goals of the workshop have been to plan how to widen and deepen the impact of software engineering knowledge in research labs across the globe and to prioritize pressing open questions for the software engineering community with respect to research software.
 
+\subsection{Pledges}
+
 A key result of this workshop has been to identify a number of concrete \emph{actions} to be taken by researchers involved in the use, production, and evaluation of academic software. These actions are expressed as a series of personal \emph{pledges} that researchers are encouraged to take and follow.
 
 The pledges are organized into three groups, dealing with:
@@ -210,12 +212,15 @@ and
 \item I will publish the intellectual contributions of my research software, and I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.
 \end{itemize}
 
-Below we discuss, for each pledge, the \emph{background} motivating the pledge, possible \emph{contradictions or concerns} pose challenges for the pledge, \emph{what actions are needed}, what impact these actions are expected to bring, and who else needs to take action.
+\subsection{Pledge discussion}
+
+Here we discuss, for each pledge, the \emph{background} motivating the pledge, possible \emph{contradictions or concerns} pose challenges for the pledge, \emph{what actions are needed}, what impact these actions are expected to bring, and who else needs to take action.
+
 
 
 %:=== DISCUSSION OF PLEDGES ===
 % --------------------------------------------------
-\subsection*{Citation}
+\subsubsection*{Citation pledge}
 
 % ----------
 \paragraph{I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to do so as well.}
@@ -271,7 +276,7 @@ need to create mechanisms for all products to includes citations as part of thei
 %\todo{Note: We will need good (and diverse enough) examples for how to properly cite software.}
 
 % --------------------------------------------------
-\subsection*{Careers}
+\subsubsection*{Careers pledge}
 
 % ----------
 \paragraph{I will recognize software contributions in hiring and promotion within my institution.}
@@ -307,7 +312,7 @@ If it is not clear how this may be done, I will explicitly ask where software co
 These actions should help to drive change in the university at higher levels and will involve the actions of higher level administrators.
 
 % --------------------------------------------------
-\subsection*{Development}
+\subsubsection*{Development pledges}
 
 % ----------
 \paragraph{I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.}
