--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -445,7 +445,7 @@ The research areas outlined below are concerned with gaining a deeper understand
 % --------------------------------------------------
 \subsection{Quantifying the availability of scientific software}
 
-Existing work has included literature surveys of particular publication venues \todo{need references} that aim to provide some measure of how much software is available. However, there is limited consensus on what constitutes code that is expected to be released, and the level of scrutiny with which to evaluate a particular publication. These limitations make comparisons across venues difficult, let alone fields or disciplines. Such comparisons constitute a component of understanding the change which we try to bring about with improved tools and advocacy programs. 
+Existing work has included literature surveys of particular publication venues \todo{need references} \katznote{James is probably best to add these} that aim to provide some measure of how much software is available. However, there is limited consensus on what constitutes code that is expected to be released, and the level of scrutiny with which to evaluate a particular publication. These limitations make comparisons across venues difficult, let alone fields or disciplines. Such comparisons constitute a component of understanding the change which we try to bring about with improved tools and advocacy programs. 
 
 Specific questions to be addressed:
 \begin{itemize}
@@ -493,9 +493,11 @@ The following specific questions need to be addressed:
 \todo{Refer to related work:
 Executable papers, Peter Sloot (Elsevier's executable paper competition)~\cite{execpapers} The Collage Authoring Environment~\cite{NOWAKOWSKI2011608},
 SHARE~\cite{DBLP:journals/procedia/GorpM11} [2.0] Pieter van Gorp}
+\katznote{and Geoscience Papers of the Future (GPF) -- \url{http://www.scientificpaperofthefuture.org/gpf/}; as an older experiment - \url{http://www.runmycode.org}}
 
 What about this:
 \texttt{http://www.journals.elsevier.com/softwarex}
+\katznote{If we want to talk about journals that publish software, we should also add JORS (\url{http://openresearchsoftware.metajnl.com}) and JOSS (\url{http://joss.theoj.org}) as general ones, and refer to \url{https://www.software.ac.uk/which-journals-should-i-publish-my-software} for a longer list}
 
 
 % --------------------------------------------------
@@ -514,7 +516,7 @@ Many common tools that embody SE best practices are not written for scientists. 
     \end{itemize}
 \item Tooling and methodology to enable scientists to think about their models as first class entities
 \item Enabling co-research of the (visual) language needed to describe new theory, and enabling immediate simulation and verification of the new language.
-\item A generalized/moldable matlab, moldable maple.
+\item A generalized/moldable Matlab, moldable maple.
 \end{itemize}
 
 % --------------------------------------------------
