adding one more comment

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -493,7 +493,7 @@ The following specific questions need to be addressed:
 \todo{Refer to related work:
 Executable papers, Peter Sloot (Elsevier's executable paper competition)~\cite{execpapers} The Collage Authoring Environment~\cite{NOWAKOWSKI2011608},
 SHARE~\cite{DBLP:journals/procedia/GorpM11} [2.0] Pieter van Gorp}
-\katznote{and Geoscience Papers of the Future (GPF) -- \url{http://www.scientificpaperofthefuture.org/gpf/}; as an older experiment - \url{http://www.runmycode.org}}
+\katznote{and Geoscience Papers of the Future (GPF) -- \url{http://www.scientificpaperofthefuture.org/gpf/} (cited later as \cite{onto_soft_what_2016} though I think the URL I gave is a little better); as an older experiment - \url{http://www.runmycode.org}}
 
 What about this:
 \texttt{http://www.journals.elsevier.com/softwarex}
