fixing software citation bib to match now published paper

--- a/eas.bib
+++ b/eas.bib
@@ -172,14 +172,13 @@ Shared under CC-BY.},
 }
 
 @article{arfon_m._smith_software_2016,
-	series = {Software {Citation} {Workshop} {Report}},
-	title = {Software {Citation} {Principles}},
-	volume = {Accepted},
-	url = {https://www.force11.org/software-citation-principles},
+	title = {Software Citation Principles},
+	doi = {10.7717/peerj-cs.86},
 	journal = {PeerJ Computer Science},
-	author = {{Arfon M. Smith} and {Kyle E. Niemeyer} and {Daniel S. Katz} and {FORCE11 Software Citation Working Group}},
+	author = {Arfon M. Smith and Kyle E. Niemeyer and Daniel S. Katz and {FORCE11 Software Citation Working Group}},
+	volume={2},
+	pages = {e86},
 	year = {2016},
-	file = {software-citation-principles.pdf:/Users/khuff/Library/Application Support/Zotero/Profiles/lvoutoj9.default/zotero/storage/N3B4GH48/software-citation-principles.pdf:application/pdf}
 }
 
 @misc{nick_barnes_science_2013,
